# javidaloca

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
fluentbindings/: Cargo.toml
fluentbindings/src/: bundle.rs  lib.rs  value.rs
natives/: Cargo.toml
natives/src/: args.rs  bundle.rs  lib.rs  resource.rs  value.rs
src/main/java/io/github/javidaloca/: Checks.java  FluentArgs.java  FluentBundle.java  FluentDouble.java  FluentInt.java  FluentLong.java  FluentNumber.java  FluentResource.java  FluentString.java  FluentValue.java  InvalidLocaleException.java  MessageFormatException.java  OverrideException.java  ParseException.java  RustObject.java
src/test/java/io/github/javidaloca/: FluentBundleTest.java
