[package]
name = "fluentbindings"
version = "0.1.0"
authors = ["JohnnyJayJay <johnnyjayjay02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.16.0"
fluent-bundle = "0.12.0"
fluent-syntax = "0.9.3"
unic-langid = "0.9.0"
intl-memoizer = "0.5.0"

[lib]
crate_type = ["cdylib"]