[package]
name = "natives"
version = "0.1.0"
authors = ["JohnnyJayJay <johnnyjayjay02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.16.0"
fluent = "0.11.0"
fluent-bundle = "0.11.0"

[lib]
crate_type = ["cdylib"]