[package]
name = "natives"
version = "0.1.0"
authors = ["JohnnyJayJay <johnnyjayjay02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.16.0"
fluent-bundle = { git = "https://github.com/zbraniecki/fluent-rs", branch = "custom-send" }
fluent-syntax = { git = "https://github.com/zbraniecki/fluent-rs", branch = "custom-send" }
unic-langid = "0.8.0"
intl-memoizer = "0.4.0"

[lib]
crate_type = ["cdylib"]